Add favicon to site
Added favicon.ico to the public directory and linked it in index.html to improve site branding and browser tab appearance.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/favicon.ico" />
     <title>FeeNex | Track your expenses in seconds, not hours</title>
   </head>
   <body>
