--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="icon" href="/favicon.ico" />
-    <title>FeeNex | Track your expenses in seconds, not hours</title>
+    <title>Feenex | Track your expenses in seconds, not hours</title>
   </head>
   <body>
     <div id="root"></div>
